--- a/projects.html
+++ b/projects.html
@@ -31,22 +31,22 @@
             <div class="projects">                
                 <div class="project-tile">
                     <a href="https://ykt21.github.io/BTSTributePage/" target="blank">
-                    <img src="image/butter.jpeg" width="300" height="300" alt="BTS album img"> 
+                    <img src="Image/butter.jpeg" width="300" height="300" alt="BTS album img"> 
                     <h3>BTS Tribute Page</h3></a>
                 </div> 
                 <div class="project-tile">
                     <a href="https://ykt21.github.io/Music-Apps-Survey-Form/" target="blank">
-                    <img src="image/music.jpeg" width="300" height="300" alt="Music img">
+                    <img src="Image/music.jpeg" width="300" height="300" alt="Music img">
                     <h3>Music Survey Form</h3></a>    
                 </div> 
                 <div class="project-tile">
                     <a href="https://ykt21.github.io/KBeautyProductLandingPage/" target="blank">
-                    <img src="image/kbeauty1.jpeg" width="300" height="300" alt="KBeauty Products">
+                    <img src="Image/kbeauty1.jpeg" width="300" height="300" alt="KBeauty Products">
                     <h3>KBeauty Landing Page</h3></a>
                 </div>   
                 <div class="project-tile">
                     <a href="https://ykt21.github.io/Technical-Documentation-Page/" target="blank"> 
-                    <img src="image/python1.jpeg" width="300" height="300" alt="Technical 
+                    <img src="Image/python1.jpeg" width="300" height="300" alt="Technical 
                     Documentation Page"> <h3>Technical Documentation</h3></a>
                 </div>    
             </div>                              
