--- a/projects.html
+++ b/projects.html
@@ -31,22 +31,22 @@
             <div class="projects">                
                 <div class="project-tile">
                     <a href="https://ykt21.github.io/BTSTributePage/" target="blank">
-                    <img src="Image/butter.jpeg" width="300" height="300" alt="BTS album img"> 
+                    <img src="image/butter.jpeg" width="300" height="300" alt="BTS album img"> 
                     <h3>BTS Tribute Page</h3></a>
                 </div> 
                 <div class="project-tile">
                     <a href="https://ykt21.github.io/Music-Apps-Survey-Form/" target="blank">
-                    <img src="Image/music.jpeg" width="300" height="300" alt="Music img">
+                    <img src="image/music.jpeg" width="300" height="300" alt="Music img">
                     <h3>Music Survey Form</h3></a>    
                 </div> 
                 <div class="project-tile">
                     <a href="https://ykt21.github.io/KBeautyProductLandingPage/" target="blank">
-                    <img src="Image/kbeauty1.jpeg" width="300" height="300" alt="KBeauty Products">
+                    <img src="image/kbeauty1.jpeg" width="300" height="300" alt="KBeauty Products">
                     <h3>KBeauty Landing Page</h3></a>
                 </div>   
                 <div class="project-tile">
                     <a href="https://ykt21.github.io/Technical-Documentation-Page/" target="blank"> 
-                    <img src="Image/python1.jpeg" width="300" height="300" alt="Technical 
+                    <img src="image/python1.jpeg" width="300" height="300" alt="Technical 
                     Documentation Page"> <h3>Technical Documentation</h3></a>
                 </div>    
             </div>                              
@@ -58,11 +58,11 @@
             <h1>Let's get in touch !</h1>   
             <div class="social-icons">                                             
                 <a href="https://www.linkedin.com/in/kim-tamrakar/" target="blank">
-                    <img src="Image/linkedin-icon.PNG" width="30" height="30" alt="linkedin-icon"></a>
+                    <img src="image/linkedin-icon.PNG" width="30" height="30" alt="linkedin-icon"></a>
                 <a href="https://twitter.com/itsykt21" target="blank">
-                    <img src="Image/twitter-icon.PNG" width="30" height="30" alt="twitter-icon"></a>
+                    <img src="image/twitter-icon.PNG" width="30" height="30" alt="twitter-icon"></a>
                 <a href="https://github.com/YKT21" target="blank">
-                    <img src="Image/github-icon.PNG" width="30" height="30" alt="github-icon"></a>     
+                    <img src="image/github-icon.PNG" width="30" height="30" alt="github-icon"></a>     
             </div>
         </section>
     </main>
